--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,16 +9,21 @@
 
 .header .logo {
     color: white;
-    background-color: #4169E1;
+    border: 3px;
+    background-color: #0b57d0;
     font-size: 20px;
 }
 
 .header .logo:hover {
-    background-color: #0D47A1;
+    background-color: #094abf;
 }
 
 .header-right {
     display: flex;
+}
+
+.body {
+    background-color: #f3f6fc;
 }
 
 .login-form {
@@ -64,21 +69,22 @@
 }
 
 .find-chat-area {
-    background-color: pink;
+    background-color: #B0A2C2;
     height: 50px;
     width: 300px;
     overflow-y: scroll;
 }
 
 .list-my-chats-area {
-    background-color: pink;
+    background-color: #B0A2C2;
     height: 300px;
     width: 300px;
     overflow-y: scroll;
 }
 
 .chat-area {
-    background-color: pink;
+    background-color: #B0A2C2;
+    opacity: 10;
     height: 400px;
     width: 300px;
     overflow-y: scroll;
@@ -86,8 +92,9 @@
 
 .delete_button {
     width: 25px;
-    background-color: #4169E1;
+    background-color: #FF3300;
     color: transparent;
+    border: 3px;
     cursor: pointer;
 }
 
@@ -95,7 +102,7 @@ li {
     height: min-content;
     width: min-content;
     list-style: none;
-    background-color: grey;
+    background-color: #00FFFF;
     padding: 5px;
     cursor: pointer;
 }
