--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     </head>
-    <body>
+    <body class="body">
 		<div class="header">
 			<form action="{{ url_for('get_list_chats') }}" method="get">
 				<input class="logo" type="submit" value="Главная">
