--- a/templates/register.html
+++ b/templates/register.html
@@ -5,10 +5,10 @@
         <title>Регистрация</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
-    <body>
+    <body class="body">
         <div class="header">
             <form action="{{ url_for('get_list_chats') }}" method="get">
-                <input class="logo" type="submit" value="Главная страница">
+                <input class="logo" type="submit" value="Главная">
             </form>
         </div>
         <h3>Регистрация</h3>
