--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -7,10 +7,10 @@
 		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 		<a id="chat_link" href="{{ url_for('get_chat') }}"></a>
 	</head>
-	<body>
+	<body class="body">
 		<div class="header">
 			<form action="{{ url_for('get_list_chats') }}" method="get">
-				<input class="logo" type="submit" value="Главная страница">
+				<input class="logo" type="submit" value="Главная">
 			</form>
 			<div class="header-right">
 				<form action="{{ url_for('get_profile') }}" method="get">
