--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,10 @@
         <title>Вход на сайт</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
-    <body>
+    <body class="body">
         <div class="header">
             <form action="{{ url_for('get_list_chats') }}" method="get">
-                <input class="logo" type="submit" value="Главная страница">
+                <input class="logo" type="submit" value="Главная">
             </form>
             <form action="{{ url_for('get_register') }}" method="get">
                 <input type="submit" value="Зарегистрироваться">
