--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,6 +5,8 @@
         <title>Главная страница</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     </head>
     <body class="body">
 		<div class="header">
@@ -35,5 +37,6 @@
 			<input class="input-button" type="text" id="message" placeholder="Введите сообщение:">
 		</div>
 		<script src="{{ url_for('static', filename='js/chat.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/resize_chat_window.js') }}"></script>
     </body>
 </html>
