--- a/templates/chat.html
+++ b/templates/chat.html
@@ -38,5 +38,6 @@
 		</div>
 		<script src="{{ url_for('static', filename='js/chat.js') }}"></script>
 		<script src="{{ url_for('static', filename='js/resize_chat_window.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/alert_delete.js') }}"></script>
     </body>
 </html>
