--- a/templates/chat.html
+++ b/templates/chat.html
@@ -26,7 +26,7 @@
 		<div id="chat">
 			<ul class="chat-area" id="chat_messages">
 				{% for message in list_messages %}
-					<div class="my_chats_links">
+					<div class="my_chats_links" {% if message[0] == login %} style="justify-content: flex-end" {% endif %}>
 						<li>{{ message[0] }}: {{ message[1] }}</li>
 						<form action="{{ url_for('get_delete_message') }}" method="post">
 							<input class="delete_button" id="chat-button" type="submit" value="{{ message[0] }},{{ chatname }},{{ message[1] }}" name="button-delete-message">
