--- a/templates/game.html
+++ b/templates/game.html
@@ -13,6 +13,7 @@
         </form>
         <div class="area">
             <div class="table">
+                <h2 class="message">{{ message }}</h2>
                 <div class="buttons">
                     <button type="submit" id="fold" onclick="fold();">Fold</button>
                     <button type="submit" id="check" onclick="check();">Check</button>
