--- a/templates/game.html
+++ b/templates/game.html
@@ -8,22 +8,26 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     </head>
     <body class="body">
-        <form action="{{ url_for('get_list_chats') }}" method="get">
-            <input class="logo" type="submit" value="Главная">
-        </form>
-        <h2 id="login">{{ login }}</h2>
-        <h2 id="game_id">{{ game_id }}</h2>
-        <div class="area">
-            <div class="table">
-                <h2 class="player2">{{ player2 }}</h2>
-                <h2 id="mes" class="message">{{ message }}</h2>
-                <h2 class="player1">{{ player1 }}</h2>
-                <div class="buttons">
-                    <button type="submit" id="fold" onclick="this.disabled = true; fold();">Fold</button>
-                    <button type="submit" id="check" onclick="this.disabled = true; check();">Check</button>
-                    <button type="submit" id="raise" onclick="this.disabled = true; raise();">Raise</button>
-                </div>
+        <div class="bar">
+            <form action="{{ url_for('get_list_chats') }}" method="get">
+                <input class="logo" type="submit" value="Главная">
+            </form>
+            <div class="info">
+                <h2 id="login">{{ login }}</h2>
+                <h2 id="game_id">стол {{ game_id }}</h2>
             </div>
+        </div>
+        <div class="area">
+            <h2 class="player2">{{ player2 }}</h2>
+            <div class="table">
+                <h2 id="mes" class="message">{{ message }}</h2>
+            </div>
+            <div class="buttons">
+                <button type="submit" id="fold" onclick="this.disabled = true; fold();">Fold</button>
+                <button type="submit" id="check" onclick="this.disabled = true; check();">Check</button>
+                <button type="submit" id="raise" onclick="this.disabled = true; raise();">Raise</button>
+            </div>
+            <h2 class="player1">{{ player1 }}</h2>
         </div>
         <script>
             const socket = io();
