--- a/templates/game.html
+++ b/templates/game.html
@@ -26,9 +26,9 @@
                 <h2>{{ bet1 }}</h2>
             </div>
             <div class="buttons">
-                <button type="submit" id="fold" onclick="fold();">Fold</button>
-                <button type="submit" id="check" onclick="check();">Check</button>
-                <button type="submit" id="raise" onclick="raise();">Raise</button>
+                <button type="submit" id="fold" class="fold">Fold</button>
+                <button type="submit" id="check" class="check">Check</button>
+                <button type="submit" id="raise" class="raise">Raise</button>
             </div>
             <h2 class="player1">{{ player1 }}</h2>
         </div>
@@ -44,7 +44,6 @@
             const raise_button = document.getElementById("raise");
             raise_button.disabled = true;
 
-
             $(document).ready(() => {
                 if (game_id != false) {
                     fold_button.disabled = false;
@@ -53,28 +52,40 @@
                 }
             });
 
+            function off() {
+                fold_button.disabled = true;
+                check_button.disabled = true;
+                raise_button.disabled = true;
+            }
+
+            $(function() {
+                $(".fold").click(function() {
+                    off();
+                    let tuple = [game_id, login, 'fold'];
+                    socket.emit("get_button", tuple);
+                });
+            });
+
+            $(function() {
+                $(".check").click(function() {
+                    off();
+                    let tuple = [game_id, login, 'check'];
+                    socket.emit("get_button", tuple);
+                });
+            });
+
+            $(function() {
+                $(".raise").click(function() {
+                    off();
+                    let tuple = [game_id, login, 'raise'];
+                    socket.emit("get_button", tuple);
+                });
+            });
 
 
-<!--            fold() {-->
-<!--                console.log(11111111111111111);-->
-<!--                let tuple = [game_id, login, 'fold'];-->
-<!--                if tuple[0] != null:-->
-<!--                    socket.emit("get_button", tuple);-->
-<!--            }-->
-<!--            function check() {-->
-<!--                let tuple = [game_id, login, 'check'];-->
-<!--                if tuple[0] != null:-->
-<!--                    socket.emit("get_button", tuple);-->
-<!--            }-->
-<!--            function raise() {-->
-<!--                let tuple = [game_id, login, 'raise'];-->
-<!--                if tuple[0] != null:-->
-<!--                    socket.emit("get_button", tuple);-->
-<!--            }-->
-
-<!--            socket.on("buttons", function(data) {-->
-<!--                alert(data);-->
-<!--            })-->
+            socket.on("buttons", function(data) {
+                alert(data);
+            })
 
 <!--            $(".logo").click(function() {-->
 <!--                let answer = confirm("Вы действительно хотите покинуть игру?");-->
