added a check function and rounds

--- a/templates/game.html
+++ b/templates/game.html
@@ -84,7 +84,7 @@
 
 
             socket.on("buttons", function(data) {
-                alert(data);
+                alert(`${data['button']}, ${data['check_round']}`);
             })
 
 <!--            $(".logo").click(function() {-->
