--- a/templates/game.html
+++ b/templates/game.html
@@ -15,6 +15,7 @@
             <div class="info">
                 <h2 id="login">{{ login }}</h2>
                 <h2 id="game_id">{{ game_id }}</h2>
+                <h2 id="check_round">{{ check_round }}</h2>
             </div>
         </div>
         <div class="area">
@@ -36,27 +37,33 @@
             const socket = io();
             const login = $("#login").html();
             const game_id = $("#game_id").html();
+            let check_round = $("#check_round").html();
 
             const fold_button = document.getElementById("fold");
-            fold_button.disabled = true;
             const check_button = document.getElementById("check");
-            check_button.disabled = true;
             const raise_button = document.getElementById("raise");
-            raise_button.disabled = true;
 
-            $(document).ready(() => {
-                if (game_id != false) {
-                    fold_button.disabled = false;
-                    check_button.disabled = false;
-                    raise_button.disabled = false;
-                }
-            });
+            function on() {
+                fold_button.disabled = false;
+                check_button.disabled = false;
+                raise_button.disabled = false;
+            }
 
             function off() {
                 fold_button.disabled = true;
                 check_button.disabled = true;
                 raise_button.disabled = true;
             }
+
+
+            $(document).ready(() => {
+                if (game_id == 'False') {
+                    off();
+                }
+                if (check_round == 'False') {
+                    off();
+                }
+            });
 
             $(function() {
                 $(".fold").click(function() {
@@ -83,9 +90,9 @@
             });
 
 
-            socket.on("buttons", function(data) {
-                alert(`${data['button']}, ${data['check_round']}`);
-            })
+<!--            socket.on("buttons", function(data) {-->
+<!--                console.log(check_round);-->
+<!--            })-->
 
 <!--            $(".logo").click(function() {-->
 <!--                let answer = confirm("Вы действительно хотите покинуть игру?");-->
