--- a/templates/game.html
+++ b/templates/game.html
@@ -91,7 +91,7 @@
 
 
 <!--            socket.on("buttons", function(data) {-->
-<!--                console.log(check_round);-->
+<!--                console.log(data);-->
 <!--            })-->
 
 <!--            $(".logo").click(function() {-->
