--- a/templates/list_chats.html
+++ b/templates/list_chats.html
@@ -32,7 +32,7 @@
 					<input type="submit" value="Новый чат">
 				</form>
 			</div>
-				<form action="{{ url_for('game') }}" method="get">
+				<form action="{{ url_for('check_game') }}" method="get">
 					<input class="logo" type="submit" value="Играть">
 				</form>
 		</div>
