--- a/templates/game.html
+++ b/templates/game.html
@@ -15,7 +15,6 @@
             <div class="info">
                 <h2 id="login">{{ login }}</h2>
                 <h2 id="game_id">{{ game_id }}</h2>
-                <h2 id="group_round">{{ group_round }}</h2>
                 <h2 id="player_round">{{ player_round }}</h2>
             </div>
         </div>
@@ -39,7 +38,6 @@
             const message = $("#mes");
             const login = $("#login").html();
             const game_id = $("#game_id").html();
-            const group_round = $("#group_round").html();
             const player_round = $("#player_round").html();
             const table_cards = $("#table_cards").html();
 
@@ -60,14 +58,14 @@
                     off();
                 }
 
-                if (player_round == 1) {
-                    off();
-                }
+<!--                if (player_round == 1) {-->
+<!--                    off();-->
+<!--                }-->
 
-                setInterval(() => {
-                    location.reload();
-                    console.log(player_round);
-                }, 5000);
+<!--                setInterval(() => {-->
+<!--                    location.reload();-->
+<!--                    console.log(player_round);-->
+<!--                }, 5000);-->
             });
 
             $(function() {
