--- a/templates/game.html
+++ b/templates/game.html
@@ -58,14 +58,14 @@
                     off();
                 }
 
-<!--                if (player_round == 1) {-->
-<!--                    off();-->
-<!--                }-->
+                if (player_round == 1) {
+                    off();
+                }
 
-<!--                setInterval(() => {-->
-<!--                    location.reload();-->
-<!--                    console.log(player_round);-->
-<!--                }, 5000);-->
+                setInterval(() => {
+                    location.reload();
+                    console.log(player_round);
+                }, 5000);
             });
 
             $(function() {
