--- a/templates/game.html
+++ b/templates/game.html
@@ -13,10 +13,10 @@
                 <input class="logo" type="submit" value="Главная">
             </form>
             <div class="info">
-                <h2 id="login">{{ login }}</h2>
-                <h2 id="game_id">{{ game_id }}</h2>
-                <h2 id="player_round">{{ player_round }}</h2>
-                <h2 id="buttons">{{ buttons }}</h2>
+                <h2 id="login">Логин: {{ login }}</h2>
+                <h2 id="game_id">Номер стола: {{ game_id }}</h2>
+                <h2 id="player_round">Раунд игрока: {{ player_round }}</h2>
+                <h2 id="buttons">Кнопки: {{ buttons }}</h2>
             </div>
         </div>
         <div class="area">
